<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutSelectionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/input_layout"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/selectWorkoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_workout_text"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:padding="7dp"/>

        <Spinner
            android:id="@+id/selectWorkoutSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="7dp">
        </Spinner>

        <TextView
            android:id="@+id/selectWeekTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_week_text"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:padding="7dp"/>

        <Spinner
            android:id="@+id/selectWeekSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="7dp">
        </Spinner>

        <TextView
            android:id="@+id/selectDayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_day_text"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:padding="7dp"/>

        <Spinner
            android:id="@+id/selectDaySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="7dp">
        </Spinner>

        <TextView
            android:id="@+id/TargetWeightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/target_weight_text"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/TargetWeightInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:textSize="30sp"
            android:padding="7dp"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/target_weight_submit_button_text" />
    </LinearLayout>
</RelativeLayout>